--- a/.eslintrc
+++ b/.eslintrc
@@ -12,6 +12,7 @@
         "no-trailing-spaces": 2,
         "no-console": 1,
         "strict": 0,
-        "eol-last": 0 //文件以单一的换行符结束
+        "eol-last": 0, //文件以单一的换行符结束
+        "comma-dangle": "off"
     }
 }
