--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "egg": "^2.0.0",
     "egg-cors": "^2.0.0",
     "egg-scripts": "^2.1.0",
+    "egg-validate": "^1.0.0",
     "koa-compress": "^2.0.0",
     "ua_parser": "^1.2.3"
   },
