增加 jwt的token生成逻辑，校验部分待添加

--- a/.eslintrc
+++ b/.eslintrc
@@ -4,7 +4,7 @@
         "indent": [2, 4],
         "array-bracket-spacing": [2, "never"],
         "linebreak-style": [0, "windows"], //换行风格
-        "quotes": [1, "single"],
+        "quotes": [1, "double"],
         "semi": [0, "never"],
         "semi-spacing": 0,
         "no-extra-semi": 0,
