--- a/.eslintrc
+++ b/.eslintrc
@@ -3,8 +3,8 @@
     "rules": {
         "indent": [2, 4],
         "array-bracket-spacing": [2, "never"],
-        "linebreak-style": [0, "windows"], //换行风格
-        "quotes": [1, "double"],
+        "linebreak-style": [0, "windows"],
+        "quotes": 0,
         "semi": [0, "never"],
         "semi-spacing": 0,
         "no-extra-semi": 0,
@@ -12,7 +12,7 @@
         "no-trailing-spaces": 2,
         "no-console": 1,
         "strict": 0,
-        "eol-last": 0, //文件以单一的换行符结束
+        "eol-last": 0,
         "comma-dangle": "off"
     }
 }
