--- a/.eslintrc
+++ b/.eslintrc
@@ -13,6 +13,7 @@
         "no-console": 1,
         "strict": 0,
         "eol-last": 0,
-        "comma-dangle": "off"
+        "comma-dangle": "off",
+        "space-before-function-paren": 0
     }
 }
