--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
   "dependencies": {
     "egg": "^2.0.0",
     "egg-cors": "^2.0.0",
+    "egg-mysql": "^3.0.0",
     "egg-scripts": "^2.1.0",
     "egg-validate": "^1.0.0",
     "jsonwebtoken": "^8.1.0",
     "koa-compress": "^2.0.0",
+    "mssql": "^4.1.0",
     "ua_parser": "^1.2.3"
   },
   "devDependencies": {
